# Marble

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Engine/: CMakeLists.txt
Engine/cmake/: MarbleGameExe.cmake
Engine/include/: EntryPoint.h  Marble.h
Engine/src/Audio/: Audio.cpp  Audio.h  AudioInternal.h  Sound.cpp  Sound.h
Engine/src/Core/: Application.cpp  Application.h  Color.h  GameLayer.h  SplashLayer.cpp  SplashLayer.h  Window.cpp  Window.h
Engine/src/Debug/: DebugDraw.cpp  DebugDraw.h
Engine/src/Input/: Input.cpp  Input.h
Engine/src/Physics/: Collision.h  SpatialHash.h
Engine/src/Renderer/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  ParticleSystem.cpp  ParticleSystem.h  PostProcessPass.cpp  PostProcessPass.h  PostProcessSettings.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  TextureRegion.cpp  TextureRegion.h  VertexArray.cpp  VertexArray.h
Engine/src/Scene/: Component.h  Components.h  Entity.h  HUD.cpp  HUD.h  Scene.cpp  Scene.h
Engine/templates/: GameManifest.manifest.in  GameMetadata.h.in  GameResource.rc.in
Game/: CMakeLists.txt
Game/assets/shaders/: batch.frag  postprocess.frag
Game/src/: PongGame.cpp  PongGame.h  main.cpp
Tools/PakTool/: CMakeLists.txt  main.cpp
assets/shaders/: batch.vert  postprocess.frag  postprocess.vert
